:sparkles: add create company handler logic
